--- a/app/src/main/res/layout/welcome_activity.xml
+++ b/app/src/main/res/layout/welcome_activity.xml
@@ -60,6 +60,7 @@
     android:textAlignment="center"
     android:textColor="@color/mainColor"
     android:textSize="16sp"
+    android:onClick="goToRegisterActivity"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -74,6 +75,8 @@
     android:onClick="gotToLogin"
     android:text="@string/startLabel"
     android:textSize="30sp"
+    android:backgroundTint="@color/white"
+    android:textColor="@color/black"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.498"
     app:layout_constraintStart_toStartOf="parent"
