Creación de fragments

--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/splashActivity"
     android:background="@color/black"
-    tools:context=".SplashActivity">
+    tools:context=".activities.SplashActivity">
 
     <ImageView
         android:id="@+id/splashIcon"
