--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -6,7 +6,7 @@
   android:layout_height="match_parent"
   android:background="@color/black"
   android:id="@+id/loginActivity"
-  tools:context=".LoginActivity">
+  tools:context=".activities.LoginActivity">
 
   <ImageView
     android:id="@+id/imageViewIconL"
