--- a/app/src/main/res/layout/reset_password_activity.xml
+++ b/app/src/main/res/layout/reset_password_activity.xml
@@ -6,7 +6,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/black"
-  tools:context=".ResetPasswordActivity">
+  tools:context=".activities.ResetPasswordActivity">
 
   <LinearLayout
     android:layout_width="match_parent"
