--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,74 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainActivity"
-    android:background="@color/black"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:id="@+id/mainActivity">
+
+  <!-- Contenido principal -->
+  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
+    android:orientation="vertical">
 
-    <!-- Contenido principal -->
-    <LinearLayout
+    <!-- Barra de navegación -->
+    <androidx.appcompat.widget.Toolbar
+      android:layout_width="match_parent"
+      android:layout_height="?attr/actionBarSize"
+      android:background="@color/black"
+      android:gravity="center"
+      android:orientation="horizontal"
+      android:id="@+id/mainToolBar"
+      app:contentInsetStart="20dp">
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+          android:layout_width="50dp"
+          android:layout_height="50dp"
+          android:contentDescription="@string/imgIconDesc"
+          android:src="@drawable/main_icon" />
+
+        <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:fontFamily="@font/adlam_display"
+          android:gravity="center"
+          android:padding="10dp"
+          android:text="@string/app_name"
+          android:textColor="@color/white"
+          android:textSize="20sp" />
+      </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
+    <!-- End Barra de navegación -->
+
+    <!-- Fragmentos -->
+    <fragment
+      android:name="androidx.navigation.fragment.NavHostFragment"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:orientation="vertical">
+      android:id="@+id/navHostFragment"
+      app:defaultNavHost="true"
+      app:navGraph="@navigation/nav_graph" />
+    <!-- End Fragmentos -->
 
-        <!-- Barra de navegación -->
-        <androidx.appcompat.widget.Toolbar
-          android:layout_width="match_parent"
-          android:layout_height="?attr/actionBarSize"
-          android:background="@color/light"
-          android:gravity="center"
-          android:orientation="horizontal"
-          android:id="@+id/mainToolBar"
-          app:contentInsertStart="20dp">
-            <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="horizontal"
-              android:gravity="center_vertical">
-                <ImageView
-                  android:layout_width="50dp"
-                  android:layout_height="50dp"
-                  android:contentDescription="@string/imgIconDesc"
-                  android:src="@drawable/main_icon" />
+  </LinearLayout>
+  <!-- End Contenido principal -->
 
-                <TextView
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:fontFamily="@font/adlam_display"
-                  android:padding="15dp"
-                  android:text="@string/app_name"
-                  android:textColor="@color/black"
-                  android:textSize="20sp"
-                  android:textStyle="bold" />
-            </LinearLayout>
-        </androidx.appcompat.widget.Toolbar>
-        <!-- End Barra de navegación -->
-
-        <!-- Fragmentos -->
-        <fragment
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:name="androidx.navigation.fragment.NavHostFragment"
-          android:id="@+id/navHostFragment"
-          app:defaultNavHost="true"
-          app:navGraph="@navigation/nav_graph"/>
-        <!-- End Fragmentos -->
-
-    </LinearLayout>
-    <!-- End Contenido principal -->
-
-    <!-- Menú de navegación -->
-    <com.google.android.material.navigation.NavigationView
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:gravity="start"
-      android:id="@+id/mainNavMenu"
-      app:headerLayout="@layout/nav_header_templeate"
-      app:menu="@menu/drawer_main_menu"/>
-    <!-- End Menú de navegación -->
-
+  <!-- Menú de navegación -->
+  <com.google.android.material.navigation.NavigationView
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_gravity="start"
+    android:id="@+id/mainNavMenu"
+    app:headerLayout="@layout/nav_header_templeate"
+    app:menu="@menu/drawer_main_menu" />
+  <!-- End Menú de navegación -->
 </androidx.drawerlayout.widget.DrawerLayout>
