--- a/app/src/main/res/layout/view_perfil_fragment.xml
+++ b/app/src/main/res/layout/view_perfil_fragment.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/perfilActivity"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  android:gravity="center"
+  android:orientation="vertical"
   android:background="@color/black"
-  tools:context=".activities.PerfilActivity">
+  android:id="@+id/viewPerfilFragmentFile">
 
   <LinearLayout
     android:layout_width="match_parent"
@@ -16,7 +16,7 @@
     android:padding="15dp">
 
     <ImageView
-      android:id="@+id/photoPerfilImg"
+      android:id="@+id/photoPerfilImgView"
       android:layout_width="178dp"
       android:layout_height="209dp"
       android:contentDescription="@string/imgIconDesc"
@@ -24,7 +24,7 @@
       android:src="@drawable/img_perfil" />
 
     <EditText
-      android:id="@+id/inputUserNamePerfil"
+      android:id="@+id/inputUserNamePerfilView"
       style="@style/editTextRounded"
       android:layout_width="match_parent"
       android:layout_height="52dp"
@@ -37,7 +37,7 @@
       android:inputType="text" />
 
     <EditText
-      android:id="@+id/inputUserLastNamePerfil"
+      android:id="@+id/inputUserLastNamePerfilView"
       style="@style/editTextRounded"
       android:layout_width="match_parent"
       android:layout_height="52dp"
@@ -50,7 +50,7 @@
       android:inputType="text" />
 
     <EditText
-      android:id="@+id/inputUserEmailPerfil"
+      android:id="@+id/inputUserEmailPerfilView"
       style="@style/editTextRounded"
       android:layout_width="match_parent"
       android:layout_height="52dp"
@@ -63,7 +63,7 @@
       android:inputType="textEmailAddress" />
 
     <EditText
-      android:id="@+id/inputUserPhonePerfil"
+      android:id="@+id/inputUserPhonePerfilView"
       style="@style/editTextRounded"
       android:layout_width="match_parent"
       android:layout_height="52dp"
@@ -76,7 +76,7 @@
       android:inputType="phone" />
 
     <Button
-      android:id="@+id/btnEditInfoUser"
+      android:id="@+id/btnEditInfoUserView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:backgroundTint="@color/white"
@@ -87,4 +87,5 @@
       android:layout_marginTop="10dp"
       android:layout_marginBottom="10dp"/>
   </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
