--- a/app/src/main/res/menu/drawer_main_menu.xml
+++ b/app/src/main/res/menu/drawer_main_menu.xml
@@ -1,4 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+  <group android:checkableBehavior="single">
+    <item
+      android:id="@+id/homeFragmentOption"
+      android:title="@string/homeLabelOptionMenu" />
 
+    <item
+      android:id="@+id/perfilFragmentOption"
+      android:title="@string/perfilLabelOptionMenu" />
+
+    <item
+      android:id="@+id/productsFragmentOption"
+      android:title="@string/productsLabelOptionMenu" />
+
+    <item
+      android:id="@+id/categoriesFragmentOption"
+      android:title="@string/categoriesLabelOptionMenu" />
+
+    <item
+      android:id="@+id/shoppingCarFragmentOption"
+      android:title="@string/shoppingCarLabelOptionMenu" />
+  </group>
 </menu>
