--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@+id/nav_graph.xml">
+  android:id="@+id/nav_graph"
+  app:startDestination="@id/homeFragmentOption">
+
+  <fragment
+    android:id="@+id/homeFragmentOption"
+    android:name="com.example.waspp.fragments.HomeFragment"
+    android:label="@string/homeLabelOptionMenu"
+    app:defaultNavHost="true" />
+
+  <fragment
+    android:id="@+id/perfilFragmentOption"
+    android:name="com.example.waspp.fragments.ViewPerfilFragment"
+    android:label="@string/perfilLabelOptionMenu" />
+
+  <fragment
+    android:id="@+id/perfilEditFragmentOption"
+    android:name="com.example.waspp.fragments.EditPerfilFragment"
+    android:label="@string/categoriesLabelOptionMenu" />
+
+  <fragment
+    android:id="@+id/productsFragmentOption"
+    android:name="com.example.waspp.fragments.ProductsFragment"
+    android:label="@string/productsLabelOptionMenu" />
+
+  <fragment
+    android:id="@+id/categoriesFragmentOption"
+    android:name="com.example.waspp.fragments.CategoriesFragment"
+    android:label="@string/categoriesLabelOptionMenu" />
+
+  <fragment
+    android:id="@+id/shoppingCarFragmentOption"
+    android:name="com.example.waspp.fragments.ShoppingCarFragment"
+    android:label="@string/shoppingCarLabelOptionMenu" />
 
 </navigation>
