--- a/app/src/main/res/layout/edit_perfil_fragment.xml
+++ b/app/src/main/res/layout/edit_perfil_fragment.xml
@@ -69,6 +69,30 @@
       android:hint="@string/inputPhoneString"
       android:inputType="phone" />
 
+    <EditText
+      android:id="@+id/inputUserAcademicProgramPerfil"
+      style="@style/editTextRounded"
+      android:layout_width="match_parent"
+      android:layout_height="52dp"
+      android:ems="10"
+      android:fontFamily="@font/adlam_display"
+      android:inputType="text"
+      android:hint="@string/inputAcademicProgram"
+      android:layout_marginTop="7dp"
+      android:layout_marginBottom="7dp" />
+
+    <EditText
+      android:id="@+id/inputUserSemesterPerfil"
+      style="@style/editTextRounded"
+      android:layout_width="match_parent"
+      android:layout_height="52dp"
+      android:ems="10"
+      android:fontFamily="@font/adlam_display"
+      android:inputType="number"
+      android:hint="@string/inputSemester"
+      android:layout_marginTop="7dp"
+      android:layout_marginBottom="7dp" />
+
     <Button
       android:id="@+id/btnEditInfoUser"
       android:layout_width="match_parent"
