--- a/app/src/main/res/layout/view_perfil_fragment.xml
+++ b/app/src/main/res/layout/view_perfil_fragment.xml
@@ -75,6 +75,32 @@
       android:hint="@string/inputPhoneString"
       android:inputType="phone" />
 
+    <EditText
+      android:id="@+id/inputUserAcademicProgramPerfilView"
+      style="@style/editTextRounded"
+      android:layout_width="match_parent"
+      android:layout_height="52dp"
+      android:ems="10"
+      android:fontFamily="@font/adlam_display"
+      android:inputType="text"
+      android:hint="@string/inputAcademicProgram"
+      android:enabled="false"
+      android:layout_marginTop="7dp"
+      android:layout_marginBottom="7dp" />
+
+    <EditText
+      android:id="@+id/inputUserSemesterPerfilView"
+      style="@style/editTextRounded"
+      android:layout_width="match_parent"
+      android:layout_height="52dp"
+      android:ems="10"
+      android:fontFamily="@font/adlam_display"
+      android:inputType="number"
+      android:hint="@string/inputSemester"
+      android:enabled="false"
+      android:layout_marginTop="7dp"
+      android:layout_marginBottom="7dp" />
+
     <Button
       android:id="@+id/btnEditInfoUserView"
       android:layout_width="match_parent"
